No longer removing findings from html report if no component exists